Some content added to index.js, a div element created in my html

--- a/index.html
+++ b/index.html
@@ -15,9 +15,11 @@
   <body>
     <header>
       <h1 id="title">Mocktail Haven</h1>
-      <h2 id="catchy-phrase">Get your mocktails on the go!</h2>
+      <h2 id="catchy-phrase">Welcome, get your mocktails on the go!</h2>
     </header>
-    <main></main>
+    <main>
+      <div id="recipe-container"></div>
+    </main>
     <footer></footer>
     <script src="./src/index.js"></script>
     <script
