functionality added to index.js, troubleshooting errors, fixing my db.json file

--- a/index.html
+++ b/index.html
@@ -18,7 +18,9 @@
       <h2 id="catchy-phrase">Welcome, get your mocktails on the go!</h2>
     </header>
     <main>
-      <div id="recipe-container"></div>
+      <div id="recipe-container">
+        <p>Loading recipes...</p>
+      </div>
     </main>
     <footer></footer>
     <script src="./src/index.js"></script>
