Adding search bar and a search button

--- a/index.html
+++ b/index.html
@@ -18,9 +18,11 @@
       <h2 id="catchy-phrase">Welcome, get your mocktails on the go!</h2>
     </header>
     <main>
-      <div id="recipe-container">
-        <p>Loading recipes...</p>
-      </div> 
+      <div class="search-container">
+        <input type="text" id="search-input" placeholder="Search recipes..." />
+        <button id="search-button">Search</button>
+      </div>
+      <div id="recipe-container"></div>
     </main>
     <footer></footer>
     <script src="./src/index.js"></script>
