--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   <body>
     <header>
       <h1 id="title">Mocktail Haven</h1>
-      <h2 id="catchy-phrase">Welcome, get your mocktails on the go!</h2>
+      <h2 id="catchy-phrase">Get your mocktails on the go!</h2>
     </header>
     <main>
       <div class="search-container">
