works on README.md

--- a/index.html
+++ b/index.html
@@ -47,12 +47,12 @@
           />
           <textarea
             id="recipe-ingredients"
-            placeholder="Ingredients"
+            placeholder="Ingredients (Each on a separate line)"
             required
           ></textarea>
           <textarea
             id="recipe-instructions"
-            placeholder="Instructions"
+            placeholder="Instructions (Each on a separate line)"
             required
           ></textarea>
           <button type="submit">Add Recipe</button>
